# courses-data

./: CONTRIBUTING.md  Cargo.toml  README.md  index.html  justfile
examples/: cli.rs  cli_full_db.rs  cli_small.rs  someexample.rs
indexeddb-website/: index.html  index.js
src/: lib.rs  main.rs  query.rs
