[package]
name = "courses-data"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bm25 = { git = "https://github.com/Michael-JB/bm25.git", rev = "e07bdab4863db089076f569daf90c58071a02631", features = ["serde"] }
json = "0.12.4"
serde = "1.0.228"
